--- a/index.html
+++ b/index.html
@@ -1194,19 +1194,32 @@
                                 </div>
                             </div>
                             <!--  Item 02 -->
-               <!--             <div class="col-lg-4">
+                        <div class="col-lg-4">
                                 <div class="blog-item box-border">
                                     <div class="blog-image">
                                         <div class="blog-intro">
-                                            <img src="assets/img/rkblog2.jpg" alt="/">
+                                            <img src="assets/img/blog2.jpg" alt="/">
                                         </div>
                                     </div>
-                                    <blockquote class="embedly-card" data-card-controls="0"><h4><a href="https://medium.com/@riteshkumar01/a-beginners-guide-to-deep-learning-with-pytorch-2ec549471744">"A Beginner's Guide to Deep Learning with PyTorch"</a></h4><p>Here is my first week of Deep Learning with PyTorch: Zero to GANs. In just a few years, the number of applications using AI has grown tremendously, from self-driving cars to recommendations from your favorite streaming provider and chatbot. Almost every major research field is now using AI.</p></blockquote>
+                                    <blockquote class="embedly-card" data-card-controls="0"><h4><a href="https://medium.com/@riteshkumar01/introduction-to-linear-regression-train-your-first-model-77d579b7472c">"Introduction to Linear Regression & Train Your First Model."</a></h4><p>Here is my second week of Deep Learning with PyTorch: Zero to GANs. In this blog, we will take a look at what is regression, types of regression, linear regression using PyTorch & we will learn how to train our first model.</p></blockquote>
 
                                 </div>
                             </div>
 
-                 2nd Blog Medium       --> 
+                            <!--  Item 03 -->
+                        <div class="col-lg-4">
+                            <div class="blog-item box-border">
+                                <div class="blog-image">
+                                    <div class="blog-intro">
+                                        <img src="assets/img/blog3.png" alt="/">
+                                    </div>
+                                </div>
+                                <blockquote class="embedly-card" data-card-controls="0"><h4><a href="https://medium.com/@riteshkumar01/self-driving-car-an-introduction-to-beginner-8ee56b39f7e2">"Self-Driving Car — An Introduction to Beginner."</a></h4><p>In this first blog of self-driving series, I would like to tell you about what is self-driving cars and some basic definitions.</p></blockquote>
+
+                            </div>
+                        </div>
+
+               <!---2nd Blog Medium       --> 
                  
                  <!--Test Blog-->
                  <div class="col-lg-4">
