--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                     <h4 class="text-darktext-capitalize mb-0"><span class="base-color">I am</span> <span class="element" data-elements=" A Mechanical Engineer., An Entrepreneur., A Web Developer."></span></h4>
                                     <p class="text-muted my-4"><hr>Organized Junior Mechanical Engineer Pursuing Mechanical Engineering at Maharshi Dayanand University.<br>Looking for great opportunity in my life and want to work with automation industry.</p>
                                <div class="button-border mt-2">
-                                        <a href="https://www.linkedin.com/in/rksensational/" target="_blank" class="pill-button">My Profile</a>
+                                        <a href="https://www.linkedin.com/in/rksensational/" target="_blank" class="pill-button">My Linkedin</a>
                                     </div>
                                 </div>
                             </div>
@@ -407,7 +407,7 @@
                                     </div>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 mr-4">
-                                    <a href="https://www.linkedin.com/in/rksensational/" target="_blank" class="pill-button">Download Cv</a>
+                                    <a href="https://drive.google.com/file/d/1I9SBSsNN-o5qVXk6abt4ld7mXQoyRPdO/view?usp=sharing" target="_blank" class="pill-button">Download My CV</a>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 to-contact">
                                     <a href="#contact" class="pill-button">Know More</a>
@@ -1211,10 +1211,23 @@
                             <div class="blog-item box-border">
                                 <div class="blog-image">
                                     <div class="blog-intro">
+                                        <img src="assets/img/Blog3 (2).png" alt="/">
+                                    </div>
+                                </div>
+                                <blockquote class="embedly-card" data-card-controls="0"><h4><a href="https://medium.com/@riteshkumar01/how-to-create-a-deep-neural-network-model-using-cifar-10-dataset-4830cd2d96c4">"How To Create a Deep Neural Network Model Using CIFAR-10 Dataset."</a></h4><p>Here is my third week of Deep Learning with PyTorch: Zero to GANs.In this blog, we will take a look at What is a neural network, What is CIFAR-10 dataset, How to develop & train a neural network model, etc.</p></blockquote>
+
+                            </div>
+                        </div>
+
+                        <!--  Self Driving Car 1 -->
+                        <div class="col-lg-4">
+                            <div class="blog-item box-border">
+                                <div class="blog-image">
+                                    <div class="blog-intro">
                                         <img src="assets/img/blog3.png" alt="/">
                                     </div>
                                 </div>
-                                <blockquote class="embedly-card" data-card-controls="0"><h4><a href="https://medium.com/@riteshkumar01/self-driving-car-an-introduction-to-beginner-8ee56b39f7e2">"Self-Driving Car — An Introduction to Beginner."</a></h4><p>In this first blog of self-driving series, I would like to tell you about what is self-driving cars and some basic definitions.</p></blockquote>
+                                <blockquote class="embedly-card" data-card-controls="0"><h4><a href="https://medium.com/@riteshkumar01/self-driving-car-an-introduction-to-beginner-8ee56b39f7e2">"Self-Driving Car — An Introduction to Beginner."</a></h4><p>In this first blog of self-driving series, I would like to tell you about what is self-driving cars and some basic definitions.A self-driving car (also called an autonomous car or a driverless car) is a vehicle that uses some sensors, cameras,and AI to travel without a human operator/mind.</p></blockquote>
 
                             </div>
                         </div>
