Added Some Info - Companies

--- a/index.html
+++ b/index.html
@@ -443,26 +443,26 @@
                                     <p class="mb-0">Adhunik Cooling System</p>
                                 </div>
                                 <!-- Item-03 -->
-                                <!-- <div class="col-6 col-lg-3 my-3 count-item">
-                                    <div class="count-icon">
-                                        <img src="assets/img/neo.png" alt="">
-                                    </div>
-                                    <div class="my-3">
-                                        <span class="timer count-number" data-from="0" data-to="793" data-speed="5000">0</span>
-                                    </div> -->
-                                    <!-- <p class="mb-0">National Engineering Olympiad</p>
-                                </div> -->
-                                <!-- Item-04 -->
                                 <div class="col-6 col-lg-3 my-3 count-item">
                                     <div class="count-icon">
-                                        <img src="assets/img/happyshappy1.png" alt="">
+                                        <img src="assets/img/ciismall.png" alt="">
+                                    </div>
+                                    <!-- <div class="my-3">
+                                        <span class="timer count-number" data-from="0" data-to="793" data-speed="5000">0</span>
+                                    </div>  -->
+                                    <p class="mb-0">Confederation of Indian Industry</p>
+                                </div>
+                                <!--- Item-04 -->
+                                <div class="col-6 col-lg-3 my-3 count-item">
+                                    <div class="count-icon">
+                                        <img src="assets/img/hssmall.png" alt="">
                                     </div>
                                     <!-- <div class="my-3">
                                         <span class="timer count-number" data-from="0" data-to="286" data-speed="5000">0</span>
                                     </div> -->
                                     <p class="mb-0">Happy Shappy</p>
                                 </div>
-                                <!-- Item-04 -->
+                                <!-- Item-05 -->
                                 <div class="col-6 col-lg-3 my-3 count-item">
                                     <div class="count-icon">
                                         <img src="assets/img/foodwala.png" alt="">
@@ -470,11 +470,41 @@
                                     <!-- <div class="my-3">
                                         <span class="timer count-number" data-from="0" data-to="286" data-speed="5000">0</span>
                                     </div> -->
-                                    <p class="mb-0">Foodwala</p>
+                                    <p class="mb-0">Foodwalas</p>
+                                </div>
+                                <!-- Item-06 -->
+                                <div class="col-6 col-lg-3 my-3 count-item">
+                                    <div class="count-icon">
+                                        <img src="assets/img/herom.png" alt="">
+                                    </div>
+                                    <!-- <div class="my-3">
+                                        <span class="timer count-number" data-from="0" data-to="286" data-speed="5000">0</span>
+                                    </div> -->
+                                    <p class="mb-0">Hero Moto Corp</p>
+                                </div>
+                                <!-- Item-07 -->
+                                <div class="col-6 col-lg-3 my-3 count-item">
+                                    <div class="count-icon">
+                                        <img src="assets/img/1mg.png" alt="">
+                                    </div>
+                                    <!-- <div class="my-3">
+                                        <span class="timer count-number" data-from="0" data-to="286" data-speed="5000">0</span>
+                                    </div> -->
+                                    <p class="mb-0">1Mg</p>
+                                </div>
+                                 <!-- Item-08 -->
+                                 <div class="col-6 col-lg-3 my-3 count-item">
+                                    <div class="count-icon">
+                                        <img src="assets/img/saelog.png" alt="">
+                                    </div>
+                                    <!-- <div class="my-3">
+                                        <span class="timer count-number" data-from="0" data-to="286" data-speed="5000">0</span>
+                                    </div> -->
+                                    <p class="mb-0">SAE</p>
                                 </div>
                             </div>
                             <br>
-                            <p class="mb-0" style="align-content: center;">Many More..</p>
+                            <p class="mb-0" style="align-content: center; font-weight: 800;">Many More..</p>
                         </div>
                         <!--  Count up End  -->
                     </div>
