--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <link rel="stylesheet" href="assets/css/main.css">
         <!--  Colorfull Style CSS  -->
         <link rel="stylesheet" href="assets/css/color/colorfull-main.css">
+
+        <!--Google Analytics-->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y7SN5QCBS9"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-Y7SN5QCBS9');
+            </script>
+
     </head>
     <body data-spy="scroll" data-target="#scrollspy" data-offset="1" class="flat-demo ">
 
