--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <div class="row">
                                 <div class="col-12 col-md-10 mx-auto">
                                     <div class="text-center">
-                                        <h2 class="mb-3">Single <span class="base-color"> Portfolio</span></h2>
+                                        <h2 class="mb-3">Single <span class="base-color">My Portfolio</span></h2>
                                         <p class="max-width-450">In a professional context it often happens that private clients corder a publication to be made.</p>
                                     </div>
                                     <div class="row contact-info mt-5">
