--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
                                         <div class="col-6 personal-info">
                                             <ul class="list-unstyled pt-4">
                                                 <li>
-                                                    <p>Birthday : <span> 6 September, 1997</span></p>
+                                                    <p>Birthday : <span> September</span></p>
                                                 </li>
                                                 <li>
-                                                    <p>Website : <span> www.codingstreet.in</span></p>
+                                                    <p>Website : <span> www.motivlearn.com </span></p>
                                                 </li>
                                                 
                                                 <li>
@@ -407,7 +407,7 @@
                                         <div class="col-6 personal-info">
                                             <ul class="list-unstyled pt-4">
                                                 <li>
-                                                    <p>Age : <span> 22</span></p>
+                                                    <p>Age : <span> 23</span></p>
                                                 </li>
                                                 <li>
                                                     <p>Degree : <span> Bachelors</span></p>
