--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                     </div>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 mr-4">
-                                    <a href="https://drive.google.com/file/d/1I9SBSsNN-o5qVXk6abt4ld7mXQoyRPdO/view?usp=sharing" target="_blank" class="pill-button">Download My CV</a>
+                                    <a href="https://www.linkedin.com/in/rksensational/" target="_blank" class="pill-button">My Profile</a>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 to-contact">
                                     <a href="#contact" class="pill-button">Know More</a>
